# GraphicsAPI

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  main.cpp  makefile  makefile-linux  makefile-windows  readme.txt
assets/shaders/gouraud/: fragment.glsl  vertex.glsl
assets/shaders/light/: fragment.glsl  vertex.glsl
assets/shaders/phong/: fragment.glsl  vertex.glsl
build-config/: config.ini  quick-clean.py  quick-clear.py  reset-defaults.py  toggle-clean.py  toggle-wait.py
debug/: debug.cpp
headers/: OpenGLVersion.hpp.in  camera.hpp  cube.hpp  debug.hpp  globals.hpp  light.hpp  material.hpp  model.hpp  program.hpp  texture.hpp  window.hpp
libraries/includes/GLAD/: glad.h
libraries/src/glad/: glad.c
libraries/src/glad-3.3/: glad.c  makefile
libraries/src/glad-3.3/glad/: glad.h
models/: cube.cpp  model.cpp
shaders/: light.cpp  material.cpp  program.cpp
textures/: texture.cpp
window/: camera.cpp  window.cpp
